variables.RunFour.scala.error
Erreur de compilation :
RunFour:4: error: not found: value estsurBiscuit
  if (estsurBiscuit){
      ^